--- a/src/App.css
+++ b/src/App.css
@@ -18,12 +18,12 @@
 
 .todo {
   align-items: center;
-  background: rgb(245, 245, 245);
+  background: rgb(250, 250, 250);
   border-radius: 3px;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: 1px 1px 1px rgb(233, 93, 163);
   display:flex;
   font-style:unset;
-  font-size: 12px;
+  font-size: 12 px;
   justify-content: space-between;
   margin-top:10px;
   margin-bottom: 16px;
@@ -31,3 +31,4 @@
   margin-left: 25px;
   padding: 3px 12px;
 }
+
